kubernetes/api-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devdb-api
  namespace: devdb
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - devdb-api.qa.testcloudprem.privacydynamics.io
    secretName: devdb-api-tls
  ingressClassName: nginx
  rules:
  - host: devdb-api.qa.testcloudprem.privacydynamics.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devdb-api
            port:
              number: 5000
