kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devdb-api
  namespace: devdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devdb-api
  template:
    metadata:
      labels:
        app: devdb-api
    spec:
      serviceAccountName: devdb  # Use the created service account
      containers:
      - name: devdb-api
        image: 827076270689.dkr.ecr.us-west-1.amazonaws.com/database-migration-anonymized/devdb-api:v0.0.56
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: devdb-api
  namespace: devdb
spec:
  selector:
    app: devdb-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devdb-api
  namespace: devdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devdb-api
            port:
              number: 5000
